force-app/main/default/objects/LogEvent__e/LogEvent__e.object-meta.xml
<CustomObject>
    <description>Platform event to submit logs</description>
    <label>Log</label>
    <pluralLabel>Logs</pluralLabel>
</CustomObject>