force-app/main/default/objects/LogEvent__e/fields/Queries__c.field-meta.xml
<CustomField>
    <fullName>Queries__c</fullName>
    <label>Queries</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>