force-app/main/default/objects/LogEvent__e/fields/Quiddity__c.field-meta.xml
<CustomField>
    <fullName>Quiddity__c</fullName>
    <description>representing how Apex is running. e.g. BULK_API vs LIGHTNING</description>
    <label>Quiddity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>