force-app/main/default/objects/LogEvent__e/fields/Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Id__c</fullName>
    <description>identifier for this request. Same as requestId in splunk or REQUEST_ID in event monitoring.</description>
    <label>Transaction Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>