force-app/main/default/objects/LogEvent__e/fields/Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Type_Name__c</fullName>
    <description>The exception type name</description>
    <label>Type Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>